[gd_scene load_steps=3 format=3 uid="uid://bhrujdyvj2mgo"]

[ext_resource type="Script" uid="uid://dh4n2pd8nt5mf" path="res://src/ui/menus/LevelSelectMenu.gd" id="1_2y4kv"]
[ext_resource type="PackedScene" path="res://scenes/components/LevelBackground.tscn" id="2_background"]

[node name="LevelSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2y4kv")

[node name="Background" parent="." instance=ExtResource("2_background")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2

[node name="BackArrowButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = 30.0
offset_top = 30.0
offset_right = 130.0
offset_bottom = 80.0
grow_vertical = 0
z_index = 100
theme_override_font_sizes/font_size = 28
text = "‚Üê Back"
flat = false

[node name="SettingsIconButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -70.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 0
z_index = 100
flat = true
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 0.9)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "‚öôÔ∏è"

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 60.0
offset_right = -80.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Select Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="VBox/StatsContainer"]
layout_mode = 2
text = "Welcome to The Elemental Echo! Select a level to begin your journey."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="LevelCardsContainer" type="GridContainer" parent="VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 6

[node name="Spacer4" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="LeaderboardContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="LeaderboardButton" type="Button" parent="VBox/LeaderboardContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
theme_override_colors/font_color = Color(1, 0.9, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 24
text = "üèÜ View Leaderboard"
flat = true

[connection signal="pressed" from="BackArrowButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SettingsIconButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBox/LeaderboardContainer/LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
